--- a/build.gradle
+++ b/build.gradle
@@ -18,10 +18,9 @@ dependencies {
     implementation 'commons-logging:commons-logging:1.2'
     implementation 'org.apache.logging.log4j:log4j-api:2.17.0'
     implementation 'org.apache.logging.log4j:log4j-core:2.17.0'
+    implementation 'com.h2database:h2:2.1.210'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
-//    implementation 'org.slf4j:slf4j-api:1.7.36'
-//    implementation 'ch.qos.logback:logback-classic:1.3.0-alpha14'
-//    implementation 'ch.qos.logback:logback-core:1.3.0-alpha14'
 
     compileOnly 'org.projectlombok:lombok:1.18.22'
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
