--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,8 @@ dependencies {
     implementation 'commons-logging:commons-logging:1.2'
     implementation 'org.apache.logging.log4j:log4j-api:2.17.0'
     implementation 'org.apache.logging.log4j:log4j-core:2.17.0'
-    implementation 'com.h2database:h2:2.1.210'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-
+    implementation 'mysql:mysql-connector-java:8.0.25'
 
     compileOnly 'org.projectlombok:lombok:1.18.22'
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
