--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,8 +6,6 @@ spring:
     url: jdbc:mysql://localhost:3306/public
     username: root
     password: password123
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     show-sql: true
-    hibernate:
-      ddl-auto: create-drop
