--- a/build.gradle
+++ b/build.gradle
@@ -2,15 +2,16 @@ plugins {
     id 'org.springframework.boot' version '2.6.4'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
+    id "org.flywaydb.flyway" version "8.2.0"
+}
+
+repositories {
+    mavenCentral()
 }
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
-
-repositories {
-    mavenCentral()
-}
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -20,13 +21,18 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-core:2.17.0'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'mysql:mysql-connector-java:8.0.25'
-
-    compileOnly 'org.flywaydb:flyway-core:8.5.2'
     implementation 'org.flywaydb:flyway-mysql:8.4.4'
     compileOnly 'org.projectlombok:lombok:1.18.22'
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
+flyway {
+    url = 'jdbc:mysql://localhost:3306/public'
+    user = 'root'
+    password = 'password123'
+    locations = ['classpath:db/migration']
 }
 
 tasks.named('test') {
