--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
     implementation 'javax.validation:validation-api:2.0.1.Final'
     implementation 'commons-logging:commons-logging:1.2'
     implementation 'org.apache.logging.log4j:log4j-api:2.17.0'
@@ -26,8 +28,6 @@ dependencies {
     runtimeOnly 'mysql:mysql-connector-java'
     implementation 'org.flywaydb:flyway-core:8.4.4'
     implementation 'org.flywaydb:flyway-mysql:8.4.4'
-
-
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
