--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,10 @@ server:
   error:
     include-message: always
 spring:
+  security:
+    user:
+      name: user
+      password: 123
   datasource:
     url: jdbc:mysql://localhost:3306/public
     username: root
